--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-svg": "15.2.0",
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-tab-view": "^3.5.2",
