added more improvment

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "movie-app",
+    "name": "MeshFlix",
     "slug": "movie-app",
     "version": "1.0.0",
     "orientation": "portrait",
