--- a/app.json
+++ b/app.json
@@ -34,6 +34,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "a55347fa-4590-477d-8864-ef9cfc857196"
+      }
     }
   }
 }
