--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "expo-font": "~12.0.7",
     "expo-image": "~1.12.12",
     "expo-linear-gradient": "^13.0.2",
-    "expo-linking": "~6.3.1",
     "expo-router": "~3.5.16",
     "expo-screen-orientation": "~7.0.5",
     "expo-splash-screen": "~0.27.5",
@@ -65,7 +64,8 @@
     "react-native-webview": "13.8.6",
     "react-native-youtube-iframe": "^2.3.0",
     "zeego": "^1.10.0",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-linking": "~6.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
