--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
+    "eas-cli": "^12.5.1",
     "expo": "~51.0.14",
     "expo-asset": "^10.0.10",
     "expo-constants": "~16.0.2",
